samples/_failures_safe/1761070429_638f64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c5275a6.c: In function ‘main’:
./samples/SAFE/__tmp_0c5275a6.c:165:19: error: expected ‘]’ at end of input
  165 |         buffer[len
      |                   ^
      |                   ]
./samples/SAFE/__tmp_0c5275a6.c:165:9: error: expected declaration or statement at end of input
  165 |         buffer[len
      |         ^~~~~~
./samples/SAFE/__tmp_0c5275a6.c:165:9: error: expected declaration or statement at end of input
